# DIGIT2.0

./: DualFeed.py  contrast.py  numpy_experiment.py  webcam.py
Raspberry_Pi_code_v1/: README.txt  example.py  main.py
Raspberry_Pi_code_v1/Imports/: MaskedVideo.py  SendRandomArrSERVER.py  SockSERVER.py
Raspberry_Pi_code_v1/digit_dot_tracking/: pyproject.toml
Raspberry_Pi_code_v1/digit_dot_tracking/digit_dot_tracking-stubs/: __init__.pyi
Raspberry_Pi_code_v1/digit_dot_tracking/include/: tracking_class.h
Raspberry_Pi_code_v1/digit_dot_tracking/source/: tracking_class.cpp
